--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
         <input
           type="text"
-          placeholder="Search Daily Tasks…"
+          placeholder="Search Daily…"
           id="daily_filter"
           class="filter-input"
           aria-label="Search Daily Tasks"
@@ -93,7 +93,7 @@
         </div>
         <input
           type="text"
-          placeholder="Search Weekly Tasks…"
+          placeholder="Search Weekly…"
           id="weekly_filter"
           class="filter-input"
           aria-label="Search Weekly Tasks"
