--- a/index.html
+++ b/index.html
@@ -123,15 +123,17 @@
 
   <footer>
     Resources:
-    <a href="https://blueprotocol.lunixx.de/" target="_blank" rel="noopener noreferrer">Database</a> |
-    <a href="https://natsume.io/bpsr/" target="_blank" rel="noopener noreferrer">Events Schedule</a> |
-    <a href="https://bptimer.com/" target="_blank" rel="noopener noreferrer">Boss Timers</a> |
+    <a href="https://github.com/Teawase/blue-protocol-checklist/" target="_blank" rel="noopener noreferrer">Project Github</a> |
+    <a href="https://blueprotocol.lunixx.de/" target="_blank" rel="noopener noreferrer">BP Database</a> |
+    <a href="https://natsume.io/bpsr/" target="_blank" rel="noopener noreferrer">BP Events Schedule</a> |
+    <a href="https://bptimer.com/" target="_blank" rel="noopener noreferrer">BP Boss Timers</a> |
+	  <a href="https://blueprotocol.interactivemap.app/" target="_blank" rel="noopener noreferrer">BP Interactive Map</a> |
     <a href="https://maxroll.gg/blue-protocol" target="_blank" rel="noopener noreferrer">Maxroll</a> |
-    <a href="https://prydwen.gg/blue-protocol/" target="_blank" rel="noopener noreferrer">Prydwen</a> |
-    <a href="https://blueprotocol.interactivemap.app/" target="_blank" rel="noopener noreferrer">Interactive Map</a>
+    <a href="https://prydwen.gg/blue-protocol/" target="_blank" rel="noopener noreferrer">Prydwen</a>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
+
