--- a/index.html
+++ b/index.html
@@ -126,21 +126,22 @@
       <h3>Privacy Notice</h3>
       <p>This site uses localStorage cookies to save your progress across sessions. We respect your privacy and do not share data.</p>
       <button id="accept-gdpr">Accept</button>
-      <button id="reject-gdpr">Opt Out</button>
+      <button id="reject-gdpr">Decline (Exit)</button>
     </div>
   </div>
 
   <footer>
     Resources:
-    <a href="https://blueprotocol.lunixx.de/" target="_blank" rel="noopener noreferrer">Database</a> |
-    <a href="https://natsume.io/bpsr/" target="_blank" rel="noopener noreferrer">Events Schedule</a> |
-    <a href="https://bptimer.com/" target="_blank" rel="noopener noreferrer">Boss Timers</a> |
+    <a href="https://blueprotocol.lunixx.de/" target="_blank" rel="noopener noreferrer">BP Database</a> |
+    <a href="https://natsume.io/bpsr/" target="_blank" rel="noopener noreferrer">BP Events Schedule</a> |
+    <a href="https://bptimer.com/" target="_blank" rel="noopener noreferrer">BP Boss Timers</a> |
+    <a href="https://blueprotocol.interactivemap.app/" target="_blank" rel="noopener noreferrer">Interactive Map</a> |
     <a href="https://maxroll.gg/blue-protocol" target="_blank" rel="noopener noreferrer">Maxroll</a> |
-    <a href="https://prydwen.gg/blue-protocol/" target="_blank" rel="noopener noreferrer">Prydwen</a> |
-    <a href="https://blueprotocol.interactivemap.app/" target="_blank" rel="noopener noreferrer">Interactive Map</a>
+    <a href="https://prydwen.gg/blue-protocol/" target="_blank" rel="noopener noreferrer">Prydwen</a>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
+
