--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <div class="container">
     <div class="section" id="daily_section">
       <h2>
-        Daily Tasks
+         Daily Tasks
         <span id="daily_streak" class="streak" style="display: none;"></span>
         <span class="counter-container">
           <span class="counter" id="daily_counter">0 / 9 complete</span>
@@ -138,11 +138,10 @@
     <a href="https://bptimer.com/" target="_blank" rel="noopener noreferrer">Boss Timers</a> |
     <a href="https://maxroll.gg/blue-protocol" target="_blank" rel="noopener noreferrer">Maxroll</a> |
     <a href="https://prydwen.gg/blue-protocol/" target="_blank" rel="noopener noreferrer">Prydwen</a> |
-    <a href="https://starresonance.th.gl/" target="_blank" rel="noopener noreferrer">Interactive Map</a>
+    <a href="https://blueprotocol.interactivemap.app/" target="_blank" rel="noopener noreferrer">Interactive Map</a>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
-
