--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
     <div class="section" id="daily_section">
       <h2>
          Daily Tasks
-        <span id="daily_streak" class="streak" style="display: none;"></span>
         <span class="counter-container">
           <span class="counter" id="daily_counter">0 / 9 complete</span>
           <div class="progress-bar" id="daily_progress_bar" data-tooltip="">
@@ -86,7 +85,7 @@
         role="status"
         style="display: none"
       >
-        All daily tasks completed! Great job! 🌟
+        All daily tasks completed! Great job!
       </div>
     </div>
 
@@ -122,7 +121,7 @@
         role="status"
         style="display: none"
       >
-        All weekly tasks completed! You're amazing! 🔥
+        All weekly tasks completed! You're amazing!
       </div>
     </div>
   </div>
