--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="action-buttons">
           <button id="btnSelectAllDaily">Select All</button>
           <button id="btnDeselectAllDaily">Deselect All</button>
-          <button id="toggleDaily" aria-pressed="false">Hide Completed</button>
+          <button id="toggleDaily" aria-pressed="true">Show Completed</button>
         </div>
         <input
           type="text"
@@ -103,7 +103,7 @@
         <div class="action-buttons">
           <button id="btnSelectAllWeekly">Select All</button>
           <button id="btnDeselectAllWeekly">Deselect All</button>
-          <button id="toggleWeekly" aria-pressed="false">Hide Completed</button>
+          <button id="toggleWeekly" aria-pressed="true">Show Completed</button>
         </div>
         <input
           type="text"
