--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
   <footer>
     Resources:
-    <a href="https://blueprotocol.lunixx.de/" target="_blank" rel="noopener noreferrer">Database</a> |
+    <a href="https://blueprotocol.lunixx.de/" target="_blank" rel="noopener noreferrer">Players Database</a> |
     <a href="https://natsume.io/bpsr/" target="_blank" rel="noopener noreferrer">Events Schedule</a> |
     <a href="https://bptimer.com/" target="_blank" rel="noopener noreferrer">Boss Timers</a> |
     <a href="https://maxroll.gg/blue-protocol" target="_blank" rel="noopener noreferrer">Maxroll</a> |
@@ -159,3 +159,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
