--- a/index.html
+++ b/index.html
@@ -152,11 +152,12 @@
     <a href="https://bptimer.com/" target="_blank" rel="noopener noreferrer">Boss Timers</a> |
     <a href="https://maxroll.gg/blue-protocol" target="_blank" rel="noopener noreferrer">Maxroll</a> |
     <a href="https://prydwen.gg/blue-protocol/" target="_blank" rel="noopener noreferrer">Prydwen</a> |
-    <a href="https://blueprotocol.interactivemap.app/" target="_blank" rel="noopener noreferrer">Interactive Map</a>
+    <a href=https://starresonance.th.gl/" target="_blank" rel="noopener noreferrer">Interactive Map</a>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
+
 
