--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="import-export">
+    <button id="importExportBtn">Import/Export</button>
+    <button id="profilesBtn">Profiles</button>
+    <input type="file" id="importFile" accept=".json" style="display: none;">
+  </div>
+
   <div class="stars"></div>
   <h1 id="page-title">Blue Protocol: Star Resonance Checklist</h1>
 
@@ -19,12 +25,6 @@
       <path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path>
     </svg>
   </a>
-
-  <div class="import-export">
-    <button id="importExportBtn">Import/Export</button>
-    <button id="profilesBtn">Profiles</button>
-    <input type="file" id="importFile" accept=".json" style="display: none;">
-  </div>
 
   <div id="event_timers" class="event-timers" aria-live="polite">
     <div id="daily_reset_timer" class="event-timer">
@@ -114,7 +114,7 @@
 
   <div id="import-export-modal" class="modal" style="display: none;">
     <div class="modal-content">
-      <h3>Import/Export</h3>
+      <h3>Import/Export [Current Profile]</h3>
       <p>Would you like to import or export your progress?</p>
       <button id="importProgressBtn">Import Progress</button>
       <button id="exportProgressBtn">Export Progress</button>
