--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
       <div class="tasks" id="daily_tasks_container" role="list"></div>
       <div id="daily_completion_message" class="completion-message" aria-live="polite" role="status" style="display: none">
-        All daily tasks completed! Great job!
+        🔥 All Daily Tasks completed! Great job!
       </div>
     </div>
 
@@ -98,7 +98,7 @@
       </div>
       <div class="tasks" id="weekly_tasks_container" role="list"></div>
       <div id="weekly_completion_message" class="completion-message" aria-live="polite" role="status" style="display: none">
-        All weekly tasks completed! You're amazing!
+        🔥 All Weekly Tasks completed! You're amazing!
       </div>
     </div>
   </div>
@@ -106,7 +106,7 @@
   <div id="gdpr-modal" class="modal" style="display: none;">
     <div class="modal-content">
       <h3>Privacy Notice</h3>
-      <p>This site uses localStorage to save your progress across sessions. We respect your privacy and do not share data.</p>
+      <p>This website uses your browser’s localStorage to save your progress across sessions. We respect your privacy and do not store any of your data.</p>
       <button id="accept-gdpr">Accept</button>
       <button id="reject-gdpr">Decline (Exit)</button>
     </div>
@@ -115,7 +115,7 @@
   <div id="import-export-modal" class="modal" style="display: none;">
     <div class="modal-content">
       <h3>Import/Export [Current Profile]</h3>
-      <p>Would you like to import or export your progress?</p>
+      <p>Would you like to import or export your progress? </p>
       <button id="importProgressBtn">Import Progress</button>
       <button id="exportProgressBtn">Export Progress</button>
       <button id="cancelImportExport">Cancel</button>
@@ -128,10 +128,10 @@
       <p>Current profile: <strong id="current-profile-name"></strong></p>
       <ul id="profiles-list" style="list-style: none; padding: 0; margin: 10px 0; max-height: 300px; overflow-y: auto;"></ul>
       <div style="margin-top: 20px; display: flex; gap: 10px;">
-        <input type="text" id="new-profile-name" placeholder="New profile name" style="flex: 1; padding: 8px; background:#333; border:none; border-radius:6px; color:#eee;">
+        <input type="text" id="new-profile-name" placeholder="New Profile Name..." style="flex: 1; padding: 8px; background:#333; border:none; border-radius:6px; color:#eee;">
         <button id="create-profile-btn">Create</button>
       </div>
-      <button id="close-profiles-modal" style="margin-top: 15px;">Close</button>
+      <button id="close-profiles-modal" style="margin-top: 20px;">Close</button>
     </div>
   </div>
 
