--- a/index.html
+++ b/index.html
@@ -144,6 +144,14 @@
     <a href="https://prydwen.gg/blue-protocol/" target="_blank" rel="noopener noreferrer">Prydwen</a> |
     <a href="https://blueprotocol.interactivemap.app/" target="_blank" rel="noopener noreferrer">Interactive Map</a>
   </footer>
+  
+  <div class="contact">
+  <small>
+    <address>
+      <a href="https://discordredirect.discordsafe.com/users/96620826689822720" target="_blank" rel="noopener noreferrer">@Teawase</a>
+    </address>
+  </small>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script src="script.js"></script>
