--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   <div id="import-export-modal" class="modal" style="display: none;">
     <div class="modal-content">
       <h3>Import/Export [Current Profile]</h3>
-      <p>Would you like to import or export your progress? </p>
+      <p>Would you like to import or export your progress?</p>
       <button id="importProgressBtn">Import Progress</button>
       <button id="exportProgressBtn">Export Progress</button>
       <button id="cancelImportExport">Cancel</button>
@@ -127,20 +127,20 @@
   </div>
 
   <div id="profiles-modal" class="modal" style="display: none;">
-    <div class="modal-content" style="max-width: 420px;">
+    <div class="modal-content" style="max-width: 400px;">
       <h3>Manage Profiles</h3>
       <p>Current profile: <strong id="current-profile-name"></strong></p>
       <ul id="profiles-list" style="list-style: none; padding: 0; margin: 10px 0; max-height: 300px; overflow-y: auto;"></ul>
       <div style="margin-top: 20px; display: flex; gap: 10px;">
-        <input type="text" id="new-profile-name" placeholder="New Profile Name..." style="flex: 1; padding: 8px; background:#333; border:none; border-radius:6px; color:#eee;">
+        <input type="text" id="new-profile-name" placeholder="Enter new profile name..." style="flex: 1; padding: 8px; background:#333; border:none; border-radius:6px; color:#eee;">
         <button id="create-profile-btn">Create</button>
       </div>
-      <button id="close-profiles-modal" style="margin-top: 20px;">Close</button>
+      <button id="close-profiles-modal" style="margin-top: 20px;">Close (Exit)</button>
     </div>
   </div>
 
   <div id="news-modal" class="modal" style="display: none;">
-    <div class="modal-content" style="max-width: 800px; max-height: 80vh; overflow: auto;">
+    <div class="modal-content" style="max-width: 600px; max-height: 80vh; overflow: auto;">
       <h2>Changelogs</h2>
       <div id="changelogs-content">Loading...</div>
       <button id="close-news-modal" style="margin-top: 20px;">Close (Exit)</button>
@@ -149,7 +149,7 @@
 
   <footer>
     Resources:
-    <a href="https://blueprotocol.lunixx.de/" target="_blank" rel="noopener noreferrer">Players Database</a> |
+    <a href="https://bp-db.de/" target="_blank" rel="noopener noreferrer">Players Database</a> |
     <a href="https://natsume.io/bpsr/" target="_blank" rel="noopener noreferrer">Events Schedule</a> |
     <a href="https://bptimer.com/" target="_blank" rel="noopener noreferrer">Boss Timers</a> |
     <a href="https://maxroll.gg/blue-protocol" target="_blank" rel="noopener noreferrer">Maxroll</a> |
