--- a/index.html
+++ b/index.html
@@ -164,6 +164,10 @@
     </address>
   </small>
   </div>
+  
+  <div class="reset-data">
+    <button id="resetSiteDataBtn">Reset Data</button>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/marked@latest/lib/marked.umd.js"></script>
