--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <a href="https://bp-db.de/" target="_blank" rel="noopener noreferrer">Players Database</a> |
     <a href="https://natsume.io/bpsr/" target="_blank" rel="noopener noreferrer">Events Schedule</a> |
     <a href="https://bptimer.com/" target="_blank" rel="noopener noreferrer">Boss Timers</a> |
-    <a href="https://maxroll.gg/blue-protocol" target="_blank" rel="noopener noreferrer">Maxroll</a> |
+    <a href="https://maxroll.gg/blue-protocol/" target="_blank" rel="noopener noreferrer">Maxroll</a> |
     <a href="https://prydwen.gg/blue-protocol/" target="_blank" rel="noopener noreferrer">Prydwen</a> |
     <a href="https://blueprotocol.interactivemap.app/" target="_blank" rel="noopener noreferrer">Interactive Map</a>
   </footer>
@@ -174,3 +174,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
