--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
     <input type="file" id="importFile" accept=".json" style="display: none;">
   </div>
 
-  <div class="news">
-    <button id="newsBtn">📰</button>
-  </div>
-
   <div class="stars"></div>
   <h1 id="page-title">Blue Protocol: Star Resonance Checklist</h1>
 
@@ -68,6 +64,7 @@
           </div>
         </span>
       </h2>
+	  
       <div class="action-filter-row">
         <div class="action-buttons">
           <button id="btnSelectAllDaily">Select All</button>
@@ -92,6 +89,7 @@
           </div>
         </span>
       </h2>
+	  
       <div class="action-filter-row">
         <div class="action-buttons">
           <button id="btnSelectAllWeekly">Select All</button>
@@ -139,12 +137,20 @@
     </div>
   </div>
 
+  <div class="news">
+    <button id="newsBtn">📰 News</button>
+  </div>
+
   <div id="news-modal" class="modal" style="display: none;">
     <div class="modal-content" style="max-width: 600px; max-height: 80vh; overflow: auto;">
       <h2>Changelogs</h2>
       <div id="changelogs-content">Loading...</div>
       <button id="close-news-modal" style="margin-top: 20px;">Close (Exit)</button>
     </div>
+  </div>
+  
+  <div class="reset-data">
+    <button id="resetSiteDataBtn">⚠️ Reset Data</button>
   </div>
 
   <footer>
@@ -164,14 +170,9 @@
     </address>
   </small>
   </div>
-  
-  <div class="reset-data">
-    <button id="resetSiteDataBtn">Reset Data</button>
-  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/marked@latest/lib/marked.umd.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
-
