--- a/index.html
+++ b/index.html
@@ -163,10 +163,14 @@
     <a href="https://blueprotocol.interactivemap.app/" target="_blank" rel="noopener noreferrer">Interactive Map</a>
   </footer>
   
+  <div class="version">
+    Version: <span id="version">Loading...</span>
+  </div>
+
   <div class="contact">
   <small>
     <address>
-      <a href="https://discordredirect.discordsafe.com/users/96620826689822720" target="_blank" rel="noopener noreferrer">@Teawase</a>
+      <a href="https://discordredirect.discordsafe.com/users/96620826689822720" target="_blank" rel="noopener noreferrer">Made with ❤️ by Teawase</a>
     </address>
   </small>
   </div>
