--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <a href="https://github.com/Teawase/blue-protocol-checklist" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a>
+  
   <div class="import-export">
     <button id="importExportBtn">Import/Export</button>
     <button id="profilesBtn">Profiles</button>
@@ -16,15 +18,6 @@
 
   <div class="stars"></div>
   <h1 id="page-title">Blue Protocol: Star Resonance Checklist</h1>
-
-  <!-- GitHub Corner -->
-  <a href="https://github.com/Teawase/blue-protocol-checklist/" target="_blank" rel="noopener noreferrer" class="github-corner" aria-label="View source on GitHub">
-    <svg width="90" height="90" viewBox="0 0 250 250" style="fill:transparent; color:#ffffff; position: absolute; top: -20; right: -3px; border: 0; z-index: 99;" aria-hidden="true">
-      <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z" fill="transparent"></path>
-      <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
-      <path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path>
-    </svg>
-  </a>
 
   <div id="event_timers" class="event-timers" aria-live="polite">
     <div id="daily_reset_timer" class="event-timer">
@@ -105,10 +98,18 @@
     </div>
   </div>
 
+  <div class="custom-categories-section">
+    <div class="custom-categories-header">
+      <h2>Custom Categories</h2>
+      <button id="addCategoryBtn" class="add-category-btn">➕</button>
+    </div>
+    <div id="custom_categories_container" class="custom-categories-container"></div>
+  </div>
+
   <div id="gdpr-modal" class="modal" style="display: none;">
     <div class="modal-content">
       <h3>Privacy Notice</h3>
-      <p>This website uses your browser’s localStorage to save your progress across sessions. We respect your privacy and do not store any of your data.</p>
+      <p>This website uses your browser's localStorage to save your progress across sessions. We respect your privacy and do not store any of your data.</p>
       <button id="accept-gdpr">Accept</button>
       <button id="reject-gdpr">Decline (Exit)</button>
     </div>
@@ -137,6 +138,48 @@
     </div>
   </div>
 
+  <div id="add-category-modal" class="modal" style="display: none;">
+    <div class="modal-content">
+      <h3>Create New Category</h3>
+      <input type="text" id="new-category-name" placeholder="Category name..." style="padding: 8px; background:#333; border:none; border-radius:6px; color:#eee; width: 100%; box-sizing: border-box;">
+      <div style="margin-top: 15px; display: flex; gap: 10px; justify-content: center;">
+        <button id="create-category-btn">Create</button>
+        <button id="close-category-modal" style="background: #666;">Cancel</button>
+      </div>
+    </div>
+  </div>
+
+  <div id="add-custom-task-modal" class="modal" style="display: none;">
+    <div class="modal-content">
+      <h3>Add Task to [<span id="category-name-display"></span>]</h3>
+      <div style="display: flex; flex-direction: column; gap: 10px;">
+        <input type="text" id="custom-task-label" placeholder="Task name..." style="padding: 8px; background:#333; border:none; border-radius:9px; color:#eee;">
+        <select id="custom-task-color" style="padding: 8px; background:#333; border:none; border-radius:6px; color:#eee;">
+          <option value="blue">Blue</option>
+          <option value="brown">Brown</option>
+          <option value="dark_purple">Dark Purple</option>
+          <option value="gold">Gold</option>
+          <option value="green">Green</option>
+          <option value="grey">Grey</option>
+          <option value="orange">Orange</option>
+          <option value="pearl">Pearl</option>
+          <option value="purple">Purple</option>
+          <option value="yellow">Yellow</option>
+        </select>
+        <input type="number" id="custom-task-maxProgress" placeholder="Max progress..." min="1" max="1000" value="1" style="padding: 8px; background:#333; border:none; border-radius:9px; color:#eee;">
+        <select id="custom-task-reset" style="padding: 8px; background:#333; border:none; border-radius:6px; color:#eee;">
+          <option value="daily">Daily Reset</option>
+          <option value="weekly">Weekly Reset</option>
+		  <option value="permanent">Permanent</option>
+        </select>
+      </div>
+      <div style="margin-top: 15px; display: flex; gap: 30px; justify-content: center;">
+        <button id="add-custom-task-btn">Add Task</button>
+        <button id="close-custom-task-modal" style="background: #666;">Cancel (Exit)</button>
+      </div>
+    </div>
+  </div>
+
   <div class="news">
     <button id="newsBtn">📰 News</button>
   </div>
@@ -150,7 +193,7 @@
   </div>
   
   <div class="reset-data">
-    <button id="resetSiteDataBtn">⚠️ Reset Data</button>
+    <button id="resetSiteDataBtn">⚠️ Clear Data</button>
   </div>
 
   <footer>
