--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <p>Would you like to import or export your progress?</p>
       <button id="importProgressBtn">Import Progress</button>
       <button id="exportProgressBtn">Export Progress</button>
-      <button id="cancelImportExport">Cancel</button>
+      <button id="cancelImportExport">Cancel (Exit)</button>
     </div>
   </div>
 
@@ -144,7 +144,7 @@
       <input type="text" id="new-category-name" placeholder="Category name..." style="padding: 8px; background:#333; border:none; border-radius:6px; color:#eee; width: 100%; box-sizing: border-box;">
       <div style="margin-top: 15px; display: flex; gap: 10px; justify-content: center;">
         <button id="create-category-btn">Create</button>
-        <button id="close-category-modal" style="background: #666;">Cancel</button>
+        <button id="close-category-modal" style="background: #666;">Cancel (Exit)</button>
       </div>
     </div>
   </div>
