--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Blue Protocol: Star Resonance Checklist – track daily and weekly tasks or create custom ones with this responsive, offline-friendly, web-based checklist. /">
+  <meta name="google-site-verification" content="tw13t1YUiWVKSXAyeCQdA0htWydSbS_7b7btGf2jvb8" />
   <title>Blue Protocol: Star Resonance Checklist ✔</title>
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <link rel="stylesheet" href="styles.css">
