--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Meta Tags & Document Setup -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Blue Protocol: Star Resonance Checklist – track daily and weekly tasks or create custom ones with this responsive, offline-friendly, web-based checklist. /">
@@ -10,17 +11,23 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <!-- Github Corner -->
   <a href="https://github.com/Teawase/blue-protocol-checklist" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a>
   
+  <!-- Import/Export & Profiles Buttons -->
   <div class="import-export">
     <button id="importExportBtn">Import/Export</button>
     <button id="profilesBtn">Profiles</button>
     <input type="file" id="importFile" accept=".json" style="display: none;">
   </div>
 
+  <!-- Background -->
   <div class="stars"></div>
+  
+  <!-- Page Title -->
   <h1 id="page-title">Blue Protocol: Star Resonance Checklist</h1>
 
+  <!-- Event Timers -->
   <div id="event_timers" class="event-timers" aria-live="polite">
     <div id="daily_reset_timer" class="event-timer">
       <div class="name">Daily Reset</div>
@@ -48,6 +55,7 @@
     </div>
   </div>
 
+  <!-- Main Categories Modal -->
   <div class="container">
     <div class="section" id="daily_section">
       <h2>
@@ -100,6 +108,7 @@
     </div>
   </div>
 
+  <!-- Custom Categories Modal -->
   <div class="custom-categories-section">
     <div class="custom-categories-header">
       <h2>Custom Categories</h2>
@@ -108,6 +117,7 @@
     <div id="custom_categories_container" class="custom-categories-container"></div>
   </div>
 
+  <!-- GDPR Consent Modal -->
   <div id="gdpr-modal" class="modal" style="display: none;">
     <div class="modal-content">
       <h3>Privacy Notice</h3>
@@ -117,6 +127,7 @@
     </div>
   </div>
 
+  <!-- Import/Export Modal -->
   <div id="import-export-modal" class="modal" style="display: none;">
     <div class="modal-content">
       <h3>Import/Export [Current Profile]</h3>
@@ -127,6 +138,7 @@
     </div>
   </div>
 
+  <!-- Profiles Modal -->
   <div id="profiles-modal" class="modal" style="display: none;">
     <div class="modal-content" style="max-width: 400px;">
       <h3>Manage Profiles</h3>
@@ -140,6 +152,7 @@
     </div>
   </div>
 
+  <!-- Add Custom Category Modal -->
   <div id="add-category-modal" class="modal" style="display: none;">
     <div class="modal-content">
       <h3>Create New Category</h3>
@@ -151,6 +164,7 @@
     </div>
   </div>
 
+  <!-- Add Custom Task Modal -->
   <div id="add-custom-task-modal" class="modal" style="display: none;">
     <div class="modal-content">
       <h3>Add Task to [<span id="category-name-display"></span>]</h3>
@@ -182,10 +196,12 @@
     </div>
   </div>
 
+  <!-- News Button -->
   <div class="news">
     <button id="newsBtn">📰 News</button>
   </div>
 
+  <!-- News / Changelog Modal -->
   <div id="news-modal" class="modal" style="display: none;">
     <div class="modal-content" style="max-width: 800px; max-height: 80vh; overflow: auto;">
       <h2>Changelogs</h2>
@@ -193,11 +209,13 @@
       <button id="close-news-modal" style="margin-top: 20px;">Close (Exit)</button>
     </div>
   </div>
-  
+
+  <!-- Clear Data Button -->
   <div class="reset-data">
     <button id="resetSiteDataBtn">⚠️ Clear Data</button>
   </div>
 
+  <!-- Footer -->
   <footer>
     Resources:
     <a href="https://bp-db.de/" target="_blank" rel="noopener noreferrer">Players Database</a> |
@@ -208,10 +226,12 @@
     <a href="https://blueprotocol.interactivemap.app/" target="_blank" rel="noopener noreferrer">Interactive Map</a>
   </footer>
   
+  <!-- Version Display -->
   <div class="version">
     Version: <span id="version">Loading...</span>
   </div>
 
+  <!-- Contact -->
   <div class="contact">
   <small>
     <address>
@@ -220,6 +240,7 @@
   </small>
   </div>
 
+  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/marked@latest/lib/marked.umd.js"></script>
   <script src="script.js"></script>
