--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Blue Protocol: Star Resonance Checklist – track daily and weekly tasks or create custom ones with this responsive, offline-friendly, web-based checklist. /">
   <meta name="google-site-verification" content="tw13t1YUiWVKSXAyeCQdA0htWydSbS_7b7btGf2jvb8" />
   <title>Blue Protocol: Star Resonance Checklist ✔</title>
+  <link rel="manifest" href="manifest.json">
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <link rel="stylesheet" href="styles.css">
 </head>
