--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
   <!-- Meta Tags & Document Setup -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Blue Protocol: Star Resonance Checklist – track daily and weekly tasks or create custom ones with this responsive, offline-friendly, web-based checklist. /">
   <title>Blue Protocol: Star Resonance Checklist ✔</title>
+  <meta name="description" content="Blue Protocol: Star Resonance Checklist – track daily and weekly tasks or create custom ones with this responsive, offline-friendly, web-based checklist.">
+  
+  <meta property="og:title" content="Blue Protocol: Star Resonance Checklist">
+  <meta property="og:description" content="Blue Protocol: Star Resonance Checklist – track daily and weekly tasks or create custom ones with this responsive, offline-friendly, web-based checklist.">
+  <meta property="og:image" content="https://raw.githubusercontent.com/Teawase/blue-protocol-checklist/main/Previews/mainpage.png">
+  <meta property="og:image:alt" content="Blue Protocol Star Resonance Checklist">
+  <meta property="og:image:width" content="1920">
+  <meta property="og:image:height" content="1080">
+  <meta property="og:url" content="https://teawase.github.io/blue-protocol-checklist/">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="BPSR Checklist">
+  <meta property="og:locale" content="en_US">
+  
   <link rel="manifest" href="manifest.json">
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <link rel="stylesheet" href="styles.css">
@@ -245,5 +257,4 @@
   <script src="https://cdn.jsdelivr.net/npm/marked@latest/lib/marked.umd.js"></script>
   <script src="script.js"></script>
 </body>
-
 </html>
