--- a/index.html
+++ b/index.html
@@ -1,23 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Meta Tags & Document Setup -->
+  <!-- Initial Setup -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Blue Protocol: Star Resonance Checklist ✔</title>
   <meta name="description" content="Blue Protocol: Star Resonance Checklist – track daily and weekly tasks or create custom ones with this responsive, offline-friendly, web-based checklist.">
   
+  <!-- Embeds & Discoverability -->
+  <meta name="author" content="Teawase">
+  <meta name="robots" content="index, follow">
   <meta property="og:title" content="Blue Protocol: Star Resonance Checklist">
   <meta property="og:description" content="Blue Protocol: Star Resonance Checklist – track daily and weekly tasks or create custom ones with this responsive, offline-friendly, web-based checklist.">
   <meta property="og:image" content="https://raw.githubusercontent.com/Teawase/blue-protocol-checklist/main/Previews/mainpage.png">
+  <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/Teawase/blue-protocol-checklist/main/Previews/mainpage.png">
+  <meta property="og:image:type" content="image/png">
   <meta property="og:image:alt" content="Blue Protocol Star Resonance Checklist">
   <meta property="og:image:width" content="1920">
   <meta property="og:image:height" content="1080">
   <meta property="og:url" content="https://teawase.github.io/blue-protocol-checklist/">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="BPSR Checklist">
+  <meta name="application-name" content="BPSR Checklist">
+  <meta name="apple-mobile-web-app-title" content="BPSR Checklist">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="theme-color" content="#242424">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta property="og:locale" content="en_US">
   
+  <!-- External -->
+  <link rel="canonical" href="https://teawase.github.io/blue-protocol-checklist/">
   <link rel="manifest" href="manifest.json">
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <link rel="stylesheet" href="styles.css">
