--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <!-- Initial Setup -->
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <meta name="author" content="Teawase">
   <title>Blue Protocol: Star Resonance Checklist ✔</title>
   <meta name="description" content="Blue Protocol: Star Resonance Checklist – track daily and weekly tasks or create custom ones with this responsive, offline-friendly, web-based checklist.">
   
   <!-- Embeds & Discoverability -->
-  <meta name="author" content="Teawase">
   <meta name="robots" content="index, follow">
+  <meta name="keywords" content="bpsr checklist 2025, blue protocol star resonance daily checklist, bpsr daily tasks guide, bpsr weekly tasks 2025, blue protocol reset timer, bpsr boss timer, star resonance dailies, bpsr weekly reset time, blue protocol daily tracker, offline bpsr checklist, bpsr day 1 checklist, bpsr unstable space daily, blue protocol guild hunt timer, bpsr reclaim hub, star resonance weeklies guide, bpsr stimen vaults timer, blue protocol life skill weeklies, bpsr season activity merits, blue protocol world boss crusade points, bpsr custom categories tracker, blue protocol progress tracker">
   <meta property="og:title" content="Blue Protocol: Star Resonance Checklist">
   <meta property="og:description" content="Blue Protocol: Star Resonance Checklist – track daily and weekly tasks or create custom ones with this responsive, offline-friendly, web-based checklist.">
   <meta property="og:image" content="https://raw.githubusercontent.com/Teawase/blue-protocol-checklist/main/Previews/mainpage.png">
