--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
   <!-- Github Corner -->
-  <a href="https://github.com/Teawase/blue-protocol-checklist" class="github-corner" aria-label="View source on GitHub" target="_blank" rel="noopener noreferrer">
+  <a href="https://github.com/Teawase/blue-protocol-checklist" class="github-corner" aria-label="View source on GitHub" target="_blank" rel="noopener noreferrer" onclick="window.open(this.href,'_blank'); return false;">
     <svg viewBox="0 0 250 250" aria-hidden="true">
       <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"/>
       <path d="M128.3,109 C113.8,99.7 119,89.6 119,89.6 122,82.7 120.5,78.6 120.5,78.6 119.2,72 123.4,76.3 123.4,76.3 127.3,80.9 125.5,87.3 125.5,87.3 122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" class="octo-arm" style="transform-origin:130px 106px"/>
