--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
   <!-- Github Corner -->
-  <a href="https://github.com/Teawase/blue-protocol-checklist" class="github-corner" aria-label="View source on GitHub">
+  <a href="https://github.com/Teawase/blue-protocol-checklist" rel="noopener noreferrer" class="github-corner" aria-label="View source on GitHub">
     <svg viewBox="0 0 250 250" aria-hidden="true">
       <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"/>
       <path d="M128.3,109 C113.8,99.7 119,89.6 119,89.6 122,82.7 120.5,78.6 120.5,78.6 119.2,72 123.4,76.3 123.4,76.3 127.3,80.9 125.5,87.3 125.5,87.3 122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" class="octo-arm" style="transform-origin:130px 106px"/>
@@ -218,7 +218,7 @@
         <select id="custom-task-reset" style="padding: 8px; background:#333; border:none; border-radius:6px; color:#eee;">
           <option value="daily">Daily Reset</option>
           <option value="weekly">Weekly Reset</option>
-		  <option value="permanent">Permanent</option>
+          <option value="permanent">Permanent</option>
         </select>
       </div>
       <div style="margin-top: 15px; display: flex; gap: 30px; justify-content: center;">
@@ -248,15 +248,34 @@
   </div>
 
   <!-- Footer -->
-  <footer>
-    Resources:
-    <a href="https://bp-db.de/" target="_blank" rel="noopener noreferrer">Players Database</a> |
-    <a href="https://natsume.io/bpsr/" target="_blank" rel="noopener noreferrer">Events Schedule</a> |
-    <a href="https://bptimer.com/" target="_blank" rel="noopener noreferrer">Boss Timers</a> |
-    <a href="https://maxroll.gg/blue-protocol/" target="_blank" rel="noopener noreferrer">Maxroll</a> |
-    <a href="https://prydwen.gg/blue-protocol/" target="_blank" rel="noopener noreferrer">Prydwen</a> |
-    <a href="https://blueprotocol.interactivemap.app/" target="_blank" rel="noopener noreferrer">Interactive Map</a>
-  </footer>
+<footer class="resources-footer">
+  <div class="resources-grid">
+    <a href="https://bp-db.de/" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="Players Database">
+      <span class="link-icon">👥</span>
+      <span class="link-text">Players Database</span>
+    </a>
+    <a href="https://natsume.io/bpsr/" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="Events Schedule">
+      <span class="link-icon">🗓️</span>
+      <span class="link-text">Events Schedule</span>
+    </a>
+    <a href="https://bptimer.com/" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="Boss Timers">
+      <span class="link-icon">⚡</span>
+      <span class="link-text">Boss Timers</span>
+    </a>
+    <a href="https://maxroll.gg/blue-protocol/" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="Maxroll">
+      <span class="link-icon">📘</span>
+      <span class="link-text">Maxroll</span>
+    </a>
+    <a href="https://prydwen.gg/blue-protocol/" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="Prydwen">
+      <span class="link-icon">🔬</span>
+      <span class="link-text">Prydwen</span>
+    </a>
+    <a href="https://blueprotocol.interactivemap.app/" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="Interactive Maps">
+      <span class="link-icon">🗺️</span>
+      <span class="link-text">Interactive Maps</span>
+    </a>
+  </div>
+</footer>
   
   <!-- Version Display -->
   <div class="version">
