--- a/index.html
+++ b/index.html
@@ -254,21 +254,25 @@
       <span class="link-icon">👥</span>
       <span class="link-text">Players Database</span>
     </a>
+    <a href="https://github.com/winjwinj/bpsr-logs/" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="DPS Meter">
+      <span class="link-icon">⚔️</span>
+      <span class="link-text">DPS Meter</span>
+    </a>
+    <a href="https://bptimer.com/" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="Boss Timers">
+      <span class="link-icon">⚡</span>
+      <span class="link-text">Boss Spawn Timers</span>
+    </a>
     <a href="https://natsume.io/bpsr/" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="Events Schedule">
       <span class="link-icon">🗓️</span>
       <span class="link-text">Events Schedule</span>
     </a>
-    <a href="https://bptimer.com/" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="Boss Timers">
-      <span class="link-icon">⚡</span>
-      <span class="link-text">Boss Timers</span>
-    </a>
-    <a href="https://maxroll.gg/blue-protocol/" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="Maxroll">
+    <a href="https://maxroll.gg/blue-protocol/" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="Maxroll Guides">
       <span class="link-icon">📘</span>
-      <span class="link-text">Maxroll</span>
+      <span class="link-text">Maxroll Guides</span>
     </a>
-    <a href="https://prydwen.gg/blue-protocol/" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="Prydwen">
+    <a href="https://prydwen.gg/blue-protocol/" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="Prydwen Wiki">
       <span class="link-icon">🔬</span>
-      <span class="link-text">Prydwen</span>
+      <span class="link-text">Prydwen Wiki</span>
     </a>
     <a href="https://blueprotocol.interactivemap.app/" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="Interactive Maps">
       <span class="link-icon">🗺️</span>
