--- a/index.html
+++ b/index.html
@@ -254,13 +254,13 @@
       <span class="link-icon">👥</span>
       <span class="link-text">Players Database</span>
     </a>
-    <a href="https://github.com/winjwinj/bpsr-logs/" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="DPS Meter">
-      <span class="link-icon">⚔️</span>
-      <span class="link-text">DPS Meter</span>
-    </a>
     <a href="https://bptimer.com/" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="Boss Timers">
       <span class="link-icon">⚡</span>
       <span class="link-text">Boss Spawn Timers</span>
+    </a>
+    <a href="https://bpsr.app/" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="DPS Meter">
+      <span class="link-icon">⚔️</span>
+      <span class="link-text">DPS Meter</span>
     </a>
     <a href="https://natsume.io/bpsr/" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="Events Schedule">
       <span class="link-icon">🗓️</span>
@@ -301,3 +301,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
