--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <p>Current profile: <strong id="current-profile-name"></strong></p>
       <ul id="profiles-list" style="list-style: none; padding: 0; margin: 10px 0; max-height: 300px; overflow-y: auto;"></ul>
       <div style="margin-top: 20px; display: flex; gap: 10px;">
-        <input type="text" id="new-profile-name" placeholder="Enter new profile name..." style="flex: 1; padding: 8px; background:#333; border:none; border-radius:6px; color:#eee;">
+        <input type="text" id="new-profile-name" placeholder="Enter new profile name..." maxlength="20"; style="flex: 1; padding: 8px; background:#333; border:none; border-radius:6px; color:#eee;">
         <button id="create-profile-btn">Create</button>
       </div>
       <button id="close-profiles-modal" style="margin-top: 20px;">Close (Exit)</button>
