--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
   
   <!-- Import/Export & Profiles Buttons -->
   <div class="import-export">
-    <button id="importExportBtn">Import/Export</button>
-    <button id="profilesBtn">Profiles</button>
+    <button id="importExportBtn">💾 Import/Export</button>
+    <button id="profilesBtn">👥 Profiles</button>
     <input type="file" id="importFile" accept=".json" style="display: none;">
   </div>
   
@@ -88,7 +88,7 @@
   <div class="container">
     <div class="section" id="daily_section">
       <h2>
-        Daily Tasks
+        📅 Daily Tasks
         <span class="counter-container">
           <span class="counter" id="daily_counter">0 / 9 complete</span>
           <div class="progress-bar" id="daily_progress_bar" data-tooltip="">
@@ -113,7 +113,7 @@
 
     <div class="section" id="weekly_section">
       <h2>
-        Weekly Tasks
+        📆 Weekly Tasks
         <span class="counter-container">
           <span class="counter" id="weekly_counter">0 / 27 complete</span>
           <div class="progress-bar" id="weekly_progress_bar" data-tooltip="">
@@ -140,7 +140,7 @@
   <!-- Custom Categories Modal -->
   <div class="custom-categories-section">
     <div class="custom-categories-header">
-      <h2>Custom Categories</h2>
+      <h2>🎯 Custom Categories</h2>
       <button id="addCategoryBtn" class="add-category-btn">➕</button>
     </div>
     <div id="custom_categories_container" class="custom-categories-container"></div>
