--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   
   <!-- Import/Export & Profiles Buttons -->
   <div class="import-export">
-    <button id="importExportBtn">💾 Import/Export</button>
+    <button id="importExportBtn">💾 Backup</button>
     <button id="profilesBtn">👥 Profiles</button>
     <input type="file" id="importFile" accept=".json" style="display: none;">
   </div>
@@ -298,3 +298,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
