--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <!-- Initial Setup -->
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="author" content="Teawase">
   <title>Blue Protocol: Star Resonance Checklist ✔</title>
@@ -82,6 +83,13 @@
       <div class="name">Stimen Vaults</div>
       <div class="countdown">Loading…</div>
     </div>
+  </div>
+  
+  <!-- Server Time -->
+  <div class="server-time" 
+     id="serverTime" 
+     aria-label="Current Server Time (UTC-2)" title="Change to 12h/24h format (UTC-2)">
+     Server Time: <span id="timeDisplay">04:20 AM</span>
   </div>
 
   <!-- Main Categories Modal -->
@@ -298,4 +306,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
