--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <!-- Server Time -->
   <div class="server-time" 
      id="serverTime" 
-     aria-label="Current Server Time (UTC-2)" title="Change to 12h/24h format (UTC-2)">
+     aria-label="Current Server Time (UTC-2)" title="Toggle 12h/24h format (UTC-2)">
      Server Time: <span id="timeDisplay">04:20 AM</span>
   </div>
 
@@ -306,3 +306,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
