--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <!-- Initial Setup -->
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5, user-scalable=yes, viewport-fit=cover">
   <meta name="author" content="Teawase">
   <title>Blue Protocol: Star Resonance Checklist ✔</title>
   <meta name="description" content="Blue Protocol: Star Resonance Checklist – track daily and weekly tasks or create custom ones with this responsive, offline-friendly, web-based checklist.">
@@ -54,6 +53,7 @@
     <input type="file" id="importFile" accept=".json" style="display: none;">
   </div>
   
+  <main>
   <!-- Page Title -->
   <h1 id="page-title">Blue Protocol: Star Resonance Checklist</h1>
 
@@ -153,6 +153,7 @@
     </div>
     <div id="custom_categories_container" class="custom-categories-container"></div>
   </div>
+  </main>
 
   <!-- GDPR Consent Modal -->
   <div id="gdpr-modal" class="modal" style="display: none;">
