--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
     </svg>
   </a>
   
+  <! ======= Christmas Theme (18th December - 5th January) ======= >
+  
+  <div class="news">
+    <button id="snowToggleBtn">❄️ Snow: On/Off</button>
+  </div>
+  
+  <! ============================================================= >
+  
   <!-- Import/Export & Profiles Buttons -->
   <div class="import-export">
     <button id="importExportBtn" aria-label="Backup: Import or Export your progress">💾 Backup</button>
@@ -301,7 +309,7 @@
   </small>
   </div>
 
-  <!-- Scripts -->
+  <!-- Scripts --> 
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/marked@latest/lib/marked.umd.js"></script>
   <script src="script.js"></script>
