--- a/index.html
+++ b/index.html
@@ -264,17 +264,21 @@
   <!-- Footer -->
 <footer class="resources-footer">
   <div class="resources-grid">
-    <a href="https://bp-db.de/" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="Players Database">
+    <a href="https://bp-db.de/" target="_blank" rel="noopener noreferrer" class="resource-link" title="Made by Lunixx" data-tooltip="Players Database">
       <span class="link-icon">👥</span>
       <span class="link-text">Players Database</span>
     </a>
-    <a href="https://bptimer.com/" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="Boss Timers">
+    <a href="https://bptimer.com/" target="_blank" rel="noopener noreferrer" class="resource-link" title="Made by Wohee" data-tooltip="Boss Timers">
       <span class="link-icon">⚡</span>
       <span class="link-text">Boss Spawn Timers</span>
     </a>
-    <a href="https://bpsr.app/" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="DPS Meter">
+    <a href="https://bpsr.app/" target="_blank" rel="noopener noreferrer" class="resource-link" title="Made by deusexitium" data-tooltip="DPS Meter">
       <span class="link-icon">⚔️</span>
       <span class="link-text">DPS Meter</span>
+    </a>
+	<a href="https://bpevents.poofcakes.com/" target="_blank" rel="noopener noreferrer" class="resource-link" title="Made by Poofcakes" data-tooltip="BP:SR Event Tracker">
+      <span class="link-icon">📆</span>
+      <span class="link-text">BP:SR Event Tracker</span>
     </a>
     <a href="https://maxroll.gg/blue-protocol/" target="_blank" rel="noopener noreferrer" class="resource-link" data-tooltip="Maxroll Guides">
       <span class="link-icon">📘</span>
@@ -311,4 +315,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
