--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <link rel="manifest" href="manifest.json">
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <link rel="stylesheet" href="styles.css">
+  <script async src="//gc.zgo.at/count.js" data-goatcounter="aHR0cHM6Ly90ZWF3YXNlLmdvYXRjb3VudGVyLmNvbS9jb3VudA=="></script>
 </head>
 <body>
   <!-- Github Corner -->
@@ -315,5 +316,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
