--- a/index.html
+++ b/index.html
@@ -276,6 +276,10 @@
       <span class="link-icon">⚔️</span>
       <span class="link-text">DPS Meter</span>
     </a>
+	<a href="https://github.com/mrsnakke/BPSR-AutoModules/" target="_blank" rel="noopener noreferrer" class="resource-link" title="Made by MrSnakeVT" data-tooltip="Module Optimizer">
+      <span class="link-icon">🧩</span>
+      <span class="link-text">Module Optimizer</span>
+    </a>
 	<a href="https://bpevents.poofcakes.com/" target="_blank" rel="noopener noreferrer" class="resource-link" title="Made by Poofcakes" data-tooltip="BP:SR Event Tracker">
       <span class="link-icon">📆</span>
       <span class="link-text">BP:SR Event Tracker</span>
@@ -315,6 +319,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
